fix files overflow

--- a/src/styles/blocks/files.scss
+++ b/src/styles/blocks/files.scss
@@ -3,7 +3,6 @@
 }
 
 .files__list {
-  overflow: hidden;
   display: flex;
   flex-wrap: wrap;
   gap: var(--gap);
